# vibe-check

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/vibe_check/: __init__.py  __main__.py  cli.py
src/vibe_check/decoder/: __init__.py  models.py  runner.py
src/vibe_check/decoder/ai/: base.py  claude_backend.py  factory.py  openai_compat_backend.py
src/vibe_check/decoder/analyzers/: cross_ref.py  generic_analyzer.py  pattern_matcher.py  python_analyzer.py
src/vibe_check/decoder/reporters/: json_reporter.py  markdown.py  terminal.py
src/vibe_check/engine/: models.py  registry.py  runner.py  scoring.py
src/vibe_check/parsers/: file_walker.py  python_parser.py
src/vibe_check/reporters/: json_reporter.py  markdown.py  terminal.py
src/vibe_check/scanners/: __init__.py  architecture.py  base.py  code_quality.py  dependencies.py  hipaa.py  security.py  testing.py
src/vibe_check/utils/: license.py
tests/: conftest.py  test_cli.py  test_license.py  test_scoring.py
tests/test_decoder/: test_ai_backends.py  test_analyzers.py  test_reporters.py  test_runner.py
tests/test_scanners/: test_architecture.py  test_hipaa.py  test_security.py
